# phonebook

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: app.html  index.html  spec.md
migrations/: 001_initial.sql  002_inbox_events.sql  003_ai_preferences.sql  004_monthly_activity.sql
src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
src/db/: migrations.rs  mod.rs  queries.rs
src/handlers/: admin.rs  calendar.rs  dev.rs  inbox.rs  mod.rs  webhook.rs
src/models/: ai_preferences.rs  availability.rs  booking.rs  conversation.rs  inbox.rs  intent.rs  mod.rs  user.rs
src/services/: calendar.rs  conversation.rs  inbox.rs  mod.rs  scheduling.rs
src/services/ai/: groq.rs  intent.rs  mod.rs  ollama.rs
src/services/messaging/: mod.rs  twilio.rs
src/web/: admin.html  app.html  dev_chat.html  inbox.html
tests/: integration_tests.rs
