[package]
name = "phonebook"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
dotenvy = "0.15.7"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
